# RES

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/llms/: llm_runner.rs  llm_utils.rs
src/schemas/: era_listing_raw.rs  idealista_listing_raw.rs  imovirtual_listing_raw.rs  llm.rs  remax_listing_raw.rs  supercasas_listing_raw.rs
src/scrappers/: driver.rs  era_scrapper.rs  file_utils.rs  idealista_scrapper.rs  imovirtual_scrapper.rs  remax_scrapper.rs  scrapper_utils.rs  supercasas_scrapper.rs
src/utils/: cache_utils.rs  file_utils.rs
