[package]
name = "RES"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thirtyfour = "0.34.0"
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.2"
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15.0"