[package]
name = "RES"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thirtyfour = "0.35.0"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15.0"
tokio-retry = "0.3"